# mana-api

./: .firebaserc  .gitignore  DOCS_UPDATE_MULTIPLE_ENDPOINTS.md  Makefile  README.md  firebase.json  package.json  pytest.ini
.cursor/rules/: specify-rules.mdc
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.specify/memory/: constitution.md
docs/: prd_1.md  tech_1.md  temp.md
functions/: main.py  pyproject.toml  requirements.txt
functions/ai/: __init__.py
functions/ai/clients/: __init__.py
functions/ai/graph/: __init__.py  inspection_graph.py
functions/ai/prompts/: __init__.py  inspection_prompts.py
functions/api/: __init__.py
functions/api/middleware/: __init__.py  auth.py  errors.py  response_states.py
functions/api/routes/: __init__.py  inspection_evidence.py  inspection_next.py  inspection_record.py  inspection_sessions.py  router.py
functions/infrastructure/: __init__.py
functions/infrastructure/config/: __init__.py  factories.py  loader.py  logging.py  observability.py
functions/infrastructure/persistence/: __init__.py  evidence_repository.py  firestore_client.py  observation_repository.py  session_repository.py  step_repository.py  storage_client.py
functions/model/: __init__.py
functions/model/aggregates/: __init__.py  inspection_session.py
functions/model/entities/: evidence.py  inspection_record.py  intent.py  observation.py  step.py  target.py
specs/001-ai-guided-inspection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+10 files in other folders)
