[project]
name = "inspection-functions"
version = "0.1.0"
description = "Firebase Cloud Functions for AI-guided inspection"
requires-python = ">=3.11"
dependencies = [
    "firebase-functions>=0.4.0",
    "firebase-admin>=6.0.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests"]
pythonpath = ["."]
